# smingers-bot

./: .env.template  .envrc  .gitignore  3  CLAUDE.md  LEARNING_LOG.md  PIPELINE_OVERVIEW.md  PIPELINE_WORKFLOW.md  PLAN.md  PROMPTS.md  PROMPTS_METACULUS_TOOLS.md  PROMPTS_PANSHUL42.md  PR_59_REVIEW.md  README.md  TOOLS.md  TOOL_USAGE_TRACKING.md  backfill_tool_usage.py  config.yaml  forecast_all_now.py  main.py  pyproject.toml  run_bot.py  test_validator.py
.cursor/rules/: question-vs-code-changes.mdc
.github/workflows/: run-bot.yaml  test-xvfb-scraper.yaml
data/: checklist_analysis_files.txt  ensemble_diversity_report.html
data/14333_20260124_090211/: metadata.json
data/14333_20260124_090228/: 00_question.json  metadata.json
data/14333_20260124_090247/: metadata.json
data/14333_20260124_090322/: 01_analysis.json  metadata.json
data/14333_20260124_090335/: metadata.json
data/16402_20260127_000806/: 00_question.json  01_analysis.json  metadata.json
data/22150_20260127_002743/: 00_question.json
data/22150_20260127_002839/: 01_analysis.json  metadata.json
data/22150_20260127_003045/: metadata.json
data/22427_20260124_090345/: metadata.json
data/22427_20260124_090407/: 00_question.json  01_analysis.json  metadata.json
data/36030_20260205_220335/: metadata.json  prediction.json  question.json  tool_usage.json
data/36030_20260205_222853/: metadata.json  prediction.json  tool_usage.json
data/38697_20260128_005502/: metadata.json  prediction.json  question.json  tool_usage.json
data/40281_20260214_022753/: question.json
data/40413_20260201_224214/: metadata.json  prediction.json  question.json  tool_usage.json
docs/: PIPELINE_CHANGELOG.md  WORKFLOW_DIAGRAM.md  analysis_market_close_questions.md  forecast_quality_assessment_template.md  llm-calls.md
scripts/: analyze_scraping.py  analyze_tool_usage.py  assessment_scores.py  backfill_database.py  backfill_tracking_from_artifacts.py  checklist_forecast_diff.py  compare_bots.py  compare_distributions.py  dashboard.py  dashboard_html.py  dashboard_streamlit.py  ensemble_diversity_report.py  evaluate_supervisor.py  fetch_url_content.py  migrate_artifacts.py  plot_score_scatter.py  react_research.py  rescrape_binary_community.py  resume_supervisor.py  run_supervisor_only.py  scrape_resolutions.py  test_agentic_yfinance.py  test_analyst.py  test_bm25_comparison.py  test_openrouter_reasoning.py  test_orient.py  test_reference_class.py  test_relevance_filter.py  test_xvfb_scraper.py  track_forecasts.py  update_score_tracking.py
src/: config.py  dashboard.py  runner.py
tests/: conftest.py  test_aggregator.py  test_extractor.py  test_forecasters.py
(+9632 files in other folders)
