[project]
name = "metaculus-bot"
version = "0.1.0"
description = "AI Forecasting Bot for Metaculus competitions"
authors = [
    {name = "Jordan Berman"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "anthropic>=0.76.0",
    "openai>=2.15.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "aiohttp>=3.13.3",
    "python-dotenv>=1.2.1",
    "litellm>=1.81.1",
    "aiosqlite>=0.22.1",
    "numpy (>=2.4.1,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.6.0",
    "lxml>=5.0.0",
    "asknews (>=0.13.10,<0.14.0)",
    "streamlit>=1.40.0",
    "trendspy>=0.1.6",
    "fredapi>=0.5.2",
    "yfinance>=0.2.40",
]

[project.scripts]
metaculus-bot = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["src/dashboard.py"]  # Streamlit dashboard, tested manually

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "playwright (>=1.49.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (let formatter handle)
]

[tool.ruff.format]
quote-style = "double"
